--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header h1 {
 header {
     padding: 40px;
     /* background-color: rgb(17, 124, 143); */
-    background-image: url(/images/scene.jpeg);
+    background-image: url(./images/scene.jpeg);
     background-position: 100px;
     background-repeat: no-repeat;
     background-position: bottom;
